refactors the http server for the new core api

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -93,7 +93,11 @@
     "gtpu.h": "c",
     "fteid.h": "c",
     "scoped_allocator": "cpp",
-    "next_prog_rule_map.h": "c"
+    "next_prog_rule_map.h": "c",
+    "csetjmp": "cpp",
+    "charconv": "cpp",
+    "cuchar": "cpp",
+    "xdp_stats_kern_user.h": "c"
   },
   "git.ignoreLimitWarning": true,
   "python.autoComplete.extraPaths": [
@@ -103,10 +107,12 @@
   "cSpell.enabled": true,
   "search.exclude": {
     "**/extern/**": true,
-    "**/package/**": true
+    "**/package/**": true,
+    "**/build/**": true
   },
   "files.exclude": {
-    "**/package/**": true
+    "**/package/**": true,
+    "**/build/**": true
   },
   "python.analysis.extraPaths": [
     "${workspaceFolder}/tests/trex/trex_client/interactive",
